test/__snapshots__/loader.test.js.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loader should throw an error if postcss version is not explicitly specified: errors 1`] = `
Array [
  "ModuleBuildError: Module build failed (from \`replaced original path\`):
Error: Add postcss as project dependency. postcss is not a peer dependency for postcss-loader. Use \`npm install postcss\` or \`yarn add postcss\`
    at Object.loader (/src/index.js:50:9)",
]
`;

exports[`loader should throw an error on invalid syntax: errors 1`] = `
Array [
  "ModuleBuildError: Module build failed (from \`replaced original path\`):
SyntaxError

(1:3) /test/fixtures/css/style.css Unnecessary curly bracket

> 1 | a {
    |   ^
  2 |   color: black;
  3 | }
",
]
`;
